# MAITRI

maitri/: README.md
maitri/ai-service/: Dockerfile  app.py  pyproject.toml
maitri/ai-service/src/models/: schemas.py
maitri/ai-service/src/services/: audio_processing.py  conversation_engine.py  emotion_detection.py  tts_service.py  wellness_calculator.py
maitri/backend/: Dockerfile  package-lock.json  package.json  tsconfig.json
maitri/backend/data/: maitri.db
maitri/backend/src/: config.ts  index.ts
maitri/backend/src/middleware/: errorHandler.ts  validation.ts
maitri/backend/src/models/: index.ts
maitri/backend/src/routes/: conversation.ts  emotion.ts  health.ts  session.ts  wellness.ts
maitri/backend/src/services/: AIService.ts  DatabaseService.ts  SocketService.ts
maitri/backend/src/utils/: logger.ts
maitri/docker/: docker-compose.yml
maitri/docs/: API.md
maitri/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
maitri/frontend/src/: App.tsx  index.css
maitri/frontend/src/components/: ConversationView.tsx  Dashboard.tsx  EmotionIndicator.tsx  Header.tsx  HistoryView.tsx  Layout.tsx  SettingsView.tsx  Sidebar.tsx  WellnessChart.tsx
maitri/frontend/src/hooks/: useAudioProcessing.ts  useMediaPipe.ts
maitri/frontend/src/store/: appStore.ts  useAppStore.ts
maitri/frontend/src/types/: index.ts
